# clipper2_holes_illustration

./: CMakeLists.txt  main.cpp  polys.txt
